--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,1 +1,12 @@
-b
+- name: 'Deploy Container'
+  uses: appleboy/ssh-action@master
+  with:
+    host: [redacted]
+    username: opc
+    key: ${{ secrets.VM_PRIV_KEY }}
+    script: |
+      echo ${{ secrets.OCIR_PASSWORD }} | docker login phx.ocir.io --username [redacted] --password-stdin
+      docker stop project-greenthumb
+      docker rm project-greenthumb
+      docker pull phx.ocir.io/[redacted]/[redacted]/greenthumb-client:latest
+      docker run -d --name project-greenthumb --restart=always --env MICRONAUT_ENVIRONMENTS=oraclecloud --env MQTT_CLIENT_USER_NAME=${{ secrets.MQTT_CLIENT_USER_NAME }} --env DATASOURCES_DEFAULT_USERNAME=${{ secrets.DATASOURCES_DEFAULT_USERNAME }} --env MQTT_CLIENT_PASSWORD=${{ secrets.MQTT_CLIENT_PASSWORD }} --env DATASOURCES_DEFAULT_OCID=${{ secrets.DATASOURCES_DEFAULT_OCID }} --env MQTT_CLIENT_CLIENT_ID=${{ secrets.MQTT_CLIENT_CLIENT_ID }} --env DATASOURCES_DEFAULT_PASSWORD=${{ secrets.DATASOURCES_DEFAULT_PASSWORD }} --env MQTT_CLIENT_SERVER_URI=${{ secrets.MQTT_CLIENT_SERVER_URI }} --env DATASOURCES_DEFAULT_WALLET_PASSWORD=${{ secrets.DATASOURCES_DEFAULT_WALLET_PASSWORD }} -p 8080:8080 -p 80:80 phx.ocir.io/[redacted]/[redacted]/greenthumb-client:latest
